// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet with XEC balances 1`] = `
Array [
  <div
    className="sc-kjoXOD fLggMW"
  >
    <div
      className="sc-brqgnP jTrtLE"
    >
      <div
        className="sc-fBuWsC caLBtP"
      >
        <h4
          className="sc-fMiknA hzosfA"
        >
          MigrationTestAlpha
        </h4>
        <a
          href="/configure"
          onClick={[Function]}
        >
          <svg
            className="sc-jTzLTM bTdWCF"
          >
            edit.svg
          </svg>
        </a>
        <div>
           
          <button
            aria-checked={false}
            className="ant-switch ant-switch-small"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="ant-switch-handle"
            />
            <span
              className="ant-switch-inner"
            >
              <svg
                className="sc-kAzzGY fUTkYj"
              >
                eye-invisible.svg
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="sc-jDwBTQ bfTPPk"
      >
        You currently have 0 
        XEC
        <br />
        Deposit some funds to use this feature
      </div>
    </div>
  </div>,
  <br />,
  <div
    className="sc-cvbbAY blOKNt"
  >
    <div
      className="sc-fAjcbJ bHLkJg"
    >
      <div
        className="ant-collapse ant-collapse-icon-position-start sc-gisBJw jqFgrU"
        role={null}
        style={
          Object {
            "marginBottom": "24px",
          }
        }
      >
        <div
          className="ant-collapse-item"
        >
          <div
            aria-disabled={false}
            aria-expanded={false}
            className="ant-collapse-header"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="ant-collapse-expand-icon"
              onClick={null}
            >
              <span
                aria-label="right"
                className="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              className="ant-collapse-header-text"
              onClick={null}
            >
              <div
                className="sc-eqIVtm kRufpp"
              >
                SideShift
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet with XEC balances and tokens 1`] = `
Array [
  <div
    className="sc-kjoXOD fLggMW"
  >
    <div
      className="sc-brqgnP jTrtLE"
    >
      <div
        className="sc-fBuWsC caLBtP"
      >
        <h4
          className="sc-fMiknA hzosfA"
        >
          MigrationTestAlpha
        </h4>
        <a
          href="/configure"
          onClick={[Function]}
        >
          <svg
            className="sc-jTzLTM bTdWCF"
          >
            edit.svg
          </svg>
        </a>
        <div>
           
          <button
            aria-checked={false}
            className="ant-switch ant-switch-small"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="ant-switch-handle"
            />
            <span
              className="ant-switch-inner"
            >
              <svg
                className="sc-kAzzGY fUTkYj"
              >
                eye-invisible.svg
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="sc-jDwBTQ bfTPPk"
      >
        You currently have 0 
        XEC
        <br />
        Deposit some funds to use this feature
      </div>
    </div>
  </div>,
  <br />,
  <div
    className="sc-cvbbAY blOKNt"
  >
    <div
      className="sc-fAjcbJ bHLkJg"
    >
      <div
        className="ant-collapse ant-collapse-icon-position-start sc-gisBJw jqFgrU"
        role={null}
        style={
          Object {
            "marginBottom": "24px",
          }
        }
      >
        <div
          className="ant-collapse-item"
        >
          <div
            aria-disabled={false}
            aria-expanded={false}
            className="ant-collapse-header"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="ant-collapse-expand-icon"
              onClick={null}
            >
              <span
                aria-label="right"
                className="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              className="ant-collapse-header-text"
              onClick={null}
            >
              <div
                className="sc-eqIVtm kRufpp"
              >
                SideShift
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet with XEC balances and tokens and state field 1`] = `
Array [
  <div
    className="sc-kjoXOD fLggMW"
  >
    <div
      className="sc-brqgnP jTrtLE"
    >
      <div
        className="sc-fBuWsC caLBtP"
      >
        <h4
          className="sc-fMiknA hzosfA"
        >
          MigrationTestAlpha
        </h4>
        <a
          href="/configure"
          onClick={[Function]}
        >
          <svg
            className="sc-jTzLTM bTdWCF"
          >
            edit.svg
          </svg>
        </a>
        <div>
           
          <button
            aria-checked={false}
            className="ant-switch ant-switch-small"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="ant-switch-handle"
            />
            <span
              className="ant-switch-inner"
            >
              <svg
                className="sc-kAzzGY fUTkYj"
              >
                eye-invisible.svg
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="sc-jAaTju eoNejo"
      >
        <span
          className="sc-bRBYWo gpfPyL"
        >
           
          0.06
           
          XEC
           
        </span>
      </div>
    </div>
  </div>,
  <br />,
  <div
    className="sc-cvbbAY blOKNt"
  >
    <div
      className="sc-fAjcbJ bHLkJg"
    >
      <div
        className="ant-collapse ant-collapse-icon-position-start sc-gisBJw jqFgrU"
        role={null}
        style={
          Object {
            "marginBottom": "24px",
          }
        }
      >
        <div
          className="ant-collapse-item"
        >
          <div
            aria-disabled={false}
            aria-expanded={false}
            className="ant-collapse-header"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="ant-collapse-expand-icon"
              onClick={null}
            >
              <span
                aria-label="right"
                className="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              className="ant-collapse-header-text"
              onClick={null}
            >
              <div
                className="sc-eqIVtm kRufpp"
              >
                SideShift
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet without XEC balance 1`] = `
Array [
  <div
    className="sc-kjoXOD fLggMW"
  >
    <div
      className="sc-brqgnP jTrtLE"
    >
      <div
        className="sc-fBuWsC caLBtP"
      >
        <h4
          className="sc-fMiknA hzosfA"
        >
          MigrationTestAlpha
        </h4>
        <a
          href="/configure"
          onClick={[Function]}
        >
          <svg
            className="sc-jTzLTM bTdWCF"
          >
            edit.svg
          </svg>
        </a>
        <div>
           
          <button
            aria-checked={false}
            className="ant-switch ant-switch-small"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="ant-switch-handle"
            />
            <span
              className="ant-switch-inner"
            >
              <svg
                className="sc-kAzzGY fUTkYj"
              >
                eye-invisible.svg
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="sc-jDwBTQ bfTPPk"
      >
        You currently have 0 
        XEC
        <br />
        Deposit some funds to use this feature
      </div>
    </div>
  </div>,
  <br />,
  <div
    className="sc-cvbbAY blOKNt"
  >
    <div
      className="sc-fAjcbJ bHLkJg"
    >
      <div
        className="ant-collapse ant-collapse-icon-position-start sc-gisBJw jqFgrU"
        role={null}
        style={
          Object {
            "marginBottom": "24px",
          }
        }
      >
        <div
          className="ant-collapse-item"
        >
          <div
            aria-disabled={false}
            aria-expanded={false}
            className="ant-collapse-header"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="ant-collapse-expand-icon"
              onClick={null}
            >
              <span
                aria-label="right"
                className="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              className="ant-collapse-header-text"
              onClick={null}
            >
              <div
                className="sc-eqIVtm kRufpp"
              >
                SideShift
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Without wallet defined 1`] = `
Array [
  <div
    className="sc-kjoXOD fLggMW"
  >
    <div
      className="sc-brqgnP jTrtLE"
    >
      <div
        className="sc-fBuWsC caLBtP"
      >
        <a
          href="/configure"
          onClick={[Function]}
        >
          <svg
            className="sc-jTzLTM bTdWCF"
          >
            edit.svg
          </svg>
        </a>
        <div>
           
          <button
            aria-checked={false}
            className="ant-switch ant-switch-small"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="ant-switch-handle"
            />
            <span
              className="ant-switch-inner"
            >
              <svg
                className="sc-kAzzGY fUTkYj"
              >
                eye-invisible.svg
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="sc-jDwBTQ bfTPPk"
      >
        You currently have 0 
        XEC
        <br />
        Deposit some funds to use this feature
      </div>
    </div>
  </div>,
  <br />,
  <div
    className="sc-cvbbAY blOKNt"
  >
    <div
      className="sc-fAjcbJ bHLkJg"
    >
      <div
        className="ant-collapse ant-collapse-icon-position-start sc-gisBJw jqFgrU"
        role={null}
        style={
          Object {
            "marginBottom": "24px",
          }
        }
      >
        <div
          className="ant-collapse-item"
        >
          <div
            aria-disabled={false}
            aria-expanded={false}
            className="ant-collapse-header"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="ant-collapse-expand-icon"
              onClick={null}
            >
              <span
                aria-label="right"
                className="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              className="ant-collapse-header-text"
              onClick={null}
            >
              <div
                className="sc-eqIVtm kRufpp"
              >
                SideShift
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
